--- a/styles.css
+++ b/styles.css
@@ -526,11 +526,13 @@ nav .fas{
     }
 
     #about{
+        width: 97%;
         padding: 5px;
         margin-top: 0px;
         margin-bottom: 0px;
+        margin: auto;
     }
-    
+
     .about-col-1{
         flex-basis: 30%;
     }
@@ -546,7 +548,7 @@ nav .fas{
     }
 
     .tab-titles p{
-        font-size: 22px;
+        font-size: 18px;
         font-weight: 600;
         margin-right:15px;
     }
@@ -567,4 +569,5 @@ nav .fas{
     .row{
         display: block;
     }
+
 }
