--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,10 @@ body{
 */
 
 /***** Projects ******/
+.hidden-project{
+    display: none;
+    transition: 0.5s;
+}
 
 #portfolio{
     padding: 50px 0;
@@ -334,17 +338,40 @@ body{
     margin-bottom: 20px;
 }
 
-.layer a{
+/* .layer a, .layer .decorate{
     margin-top: 20px;
     color: #ff004f;
     text-decoration: none;
-    font-size: 18px;
-    line-height: 60px;
+    font-size: 15px;
+    line-height: 50px;
     background: #fff;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     text-align: center;
+}
+ */
+.decorate{
+    margin-right: 2em;
+    margin-top: 20px;
+    background-color: #fff;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.decorate a{
+    color: #ff004f;
+    font-size: 1.5em;
+    border-radius: 50%;
+    line-height: 50px;
+
+
+}
+
+.d-flex{
+    display: flex;
+    justify-content: space-between;
 }
 
 .tools-used{
@@ -370,6 +397,7 @@ body{
     text-decoration: none;
     color: white;
     transition: background 0.5s;
+    cursor: pointer;
 }
 
 .see-more-btn:hover{
