--- a/styles.css
+++ b/styles.css
@@ -463,7 +463,7 @@ body{
     width: 100%;
 }
 
-.contact-right form input, form textarea{
+.contact-right input, .contact-right textarea{
     width: 100%;
     border: 0;
     outline: none;
